--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
         <h1>BellaGi</h1>
     </header>
     <main>
+        <div>
+            <div>
+                <h1>
+                    Moldes Gratuitos
+                </h1>
+            </div>
+            <div class="produto" data-modelo="Calcinha1">
+                <img src="https://th.bing.com/th/id/OIP.o57e0c2JbmBHDH8lrFBs1QHaID?o=7rm=3&rs=1&pid=ImgDetMain&cb=idpwebp2&o=7&rm=3" alt="Molde">
+                <h2>Molde Gratuito</h2>
+                <p>Baixe Agora</p>
+                <a href="./src/moldes/meu-arquivo.pdf" download="./src/mooldes/meu-arquivo.pdf">
+                    <butto class="button">Baixar</button>
+                </a>
+        </div>
         <div class="catalogo">
             <div class="produto" data-modelo="Calcinha1">
                 <img src="./images/catalogo/calcinha1.jpg" alt="Calcinha 1">
