--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h2>Molde Gratuito</h2>
                 <p>Baixe Agora</p>
                 <a href="./src/moldes/meu-arquivo.pdf" download="./src/mooldes/meu-arquivo.pdf">
-                    <butto class="button">Baixar</button>
+                    <butto class="button button-dois">Baixar</button>
                 </a>
         </div>
         <div class="catalogo">
