--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="./src/moldes/meu-arquivo.pdf" download="./src/mooldes/meu-arquivo.pdf">
                     <butto class="button button-dois">Baixar</button>
                 </a>
-        </div>
+        <!-- </div>
         <div class="catalogo">
             <div class="produto" data-modelo="Calcinha1">
                 <img src="./images/catalogo/calcinha1.jpg" alt="Calcinha 1">
@@ -38,7 +38,7 @@
                 <p>Preço: R$49,99</p>
                 <button type="submit" id="whatsappButton" class="button">comprar</button>
             </div>
-        </div>
+        </div> -->
     </main>
     <script src="/dist/js/main.js"></script>
 </body>
